--- a/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
@@ -39,6 +39,13 @@
                     </Border>
                 </DataTemplate>
             </avalonDock:DockingManager.DocumentHeaderTemplate>
+            <avalonDock:DockingManager.DocumentTitleTemplate>
+                <DataTemplate>
+                    <Border>
+                        <TextBlock Text="{Binding Path=Content.FileName}"/>
+                    </Border>
+                </DataTemplate>
+            </avalonDock:DockingManager.DocumentTitleTemplate>            
         </avalonDock:DockingManager>
     </Grid>
 </Window>
