--- a/AvalonDock/AvalonDock/Themes/generic.xaml
+++ b/AvalonDock/AvalonDock/Themes/generic.xaml
@@ -24,7 +24,10 @@
                         </Grid.RowDefinitions>
                         <avalonDockControls:DocumentPaneTabPanel x:Name="HeaderPanel" Grid.Column="0" IsItemsHost="true" Margin="2,2,2,0" Grid.Row="0" KeyboardNavigation.TabIndex="1" Panel.ZIndex="1"/>
                         <Border x:Name="ContentPanel" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"  BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Grid.Column="0" KeyboardNavigation.DirectionalNavigation="Contained" Grid.Row="1" KeyboardNavigation.TabIndex="2" KeyboardNavigation.TabNavigation="Local">
-                            <ContentPresenter x:Name="PART_SelectedContentHost" ContentSource="SelectedContent" Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                            <ContentPresenter x:Name="PART_SelectedContentHost" 
+                                              ContentSource="SelectedContent" 
+                                              Margin="{TemplateBinding Padding}"
+                                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                         </Border>
                     </Grid>
                     <ControlTemplate.Triggers>
@@ -38,6 +41,7 @@
         <Setter Property="ItemContainerStyle">
             <Setter.Value>
                 <Style TargetType="{x:Type TabItem}">
+                    <Setter Property="ContextMenu" Value="{Binding Path=Root.Manager.DocumentContextMenu}"/>
                     <Setter Property="Visibility" Value="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConverter}}"/>
                     <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
                 </Style>
@@ -88,6 +92,7 @@
         <Setter Property="ItemContainerStyle">
             <Setter.Value>
                 <Style TargetType="{x:Type TabItem}">
+                    <Setter Property="ContextMenu" Value="{Binding Path=Root.Manager.AnchorableContextMenu}"/>
                     <Setter Property="Visibility" Value="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConverter}}"/>
                     <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
                     <Style.Triggers>
@@ -116,7 +121,6 @@
         </Setter>
     </Style>
     
-    
     <Style TargetType="avalonDockControls:AnchorablePaneTitle">
         <Setter Property="Template">
             <Setter.Value>
@@ -136,11 +140,11 @@
                                               ContentTemplateSelector="{Binding Model.Root.Manager.AnchorableTitleTemplateSelector, RelativeSource={RelativeSource TemplatedParent}}"/>
 
                             <avalonDockControls:DropDownButton
-                            Style="{StaticResource {x:Static ToolBar.ToggleButtonStyleKey}}"
-                            Focusable="False"
-                            Grid.Column="1"
-                            DropDownContextMenu="{Binding Model.Root.Manager.AnchorableContextMenu, RelativeSource={RelativeSource TemplatedParent}}"
-                            DropDownContextMenuDataContext="{Binding Path=Model, RelativeSource={RelativeSource TemplatedParent}}">
+                                Style="{StaticResource {x:Static ToolBar.ToggleButtonStyleKey}}"
+                                Focusable="False"
+                                Grid.Column="1"
+                                DropDownContextMenu="{Binding Model.Root.Manager.AnchorableContextMenu, RelativeSource={RelativeSource TemplatedParent}}"
+                                DropDownContextMenuDataContext="{Binding Path=Model, RelativeSource={RelativeSource TemplatedParent}}">
                                 <Image Source="/AvalonDock;component/Images/PinMenu.png"/>
                             </avalonDockControls:DropDownButton>
 
@@ -162,6 +166,12 @@
                                 CommandParameter="{Binding Path=Model, RelativeSource={RelativeSource TemplatedParent}}" >
                                 <Image Source="/AvalonDock;component/Images/PinClose.png"/>
                             </Button>
+
+                            <avalonDockControls:DropDownControlArea 
+                                Grid.Column="0"
+                                DropDownContextMenu="{Binding Model.Root.Manager.AnchorableContextMenu, RelativeSource={RelativeSource TemplatedParent}}"
+                                DropDownContextMenuDataContext="{Binding Path=Model, RelativeSource={RelativeSource TemplatedParent}}"/>
+                            
                         </Grid>
                     </Border>
                 </ControlTemplate>
@@ -313,6 +323,14 @@
                 CommandParameter="{Binding}"/>
     </ContextMenu>
 
+    <ContextMenu x:Key="DocumentContextMenu">
+        <MenuItem Header="Close" 
+                Command="{Binding Path=Root.Manager.DocumentCloseCommand}"
+                CommandParameter="{Binding}"/>
+        <MenuItem Header="Close All But This" 
+                Command="{Binding Path=Root.Manager.DocumentCloseAllButThisCommand}"
+                CommandParameter="{Binding}"/>
+    </ContextMenu>
 
     <!--DockingManager-->
     <Style x:Key="{x:Type avalonDock:DockingManager}" TargetType="{x:Type avalonDock:DockingManager}">
@@ -326,6 +344,7 @@
         <Setter Property="DocumentTitleTemplate" Value="{StaticResource DocumentTitleTemplate}"/>
         <Setter Property="AnchorableTitleTemplate" Value="{StaticResource AnchorableTitleTemplate}"/>
         <Setter Property="AnchorableContextMenu" Value="{StaticResource AnchorableContextMenu}"/>
+        <Setter Property="DocumentContextMenu" Value="{StaticResource DocumentContextMenu}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type avalonDock:DockingManager}">
@@ -457,7 +476,11 @@
                             <Border x:Name="Header">
                                 <avalonDockControls:AnchorablePaneTitle Model="{Binding Model, RelativeSource={RelativeSource TemplatedParent}}"/>
                             </Border>
-                            <ContentPresenter Content="{Binding Model.Content, RelativeSource={RelativeSource TemplatedParent}}" Grid.Row="1"/>
+                            <ContentPresenter 
+                                Content="{Binding Model.Content, RelativeSource={RelativeSource TemplatedParent}}" 
+                                ContentTemplate="{Binding AnchorableTemplate, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"
+                                ContentTemplateSelector="{Binding AnchorableTemplateSelector, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"
+                                Grid.Row="1"/>
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -576,11 +599,10 @@
                                         <ColumnDefinition Width="Auto"/>
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
-                                    <!--<TextBlock Text="{Binding Path=Model.SinglePane.SelectedContent.Title, RelativeSource={RelativeSource TemplatedParent}}" VerticalAlignment="Center" HorizontalAlignment="Left"/>-->
+
                                     <ContentPresenter Content="{Binding Model.SinglePane.SelectedContent, RelativeSource={RelativeSource TemplatedParent}}" 
                                               ContentTemplate="{Binding Model.Root.Manager.AnchorableTitleTemplate, RelativeSource={RelativeSource TemplatedParent}}"
                                               ContentTemplateSelector="{Binding Model.Root.Manager.AnchorableTitleTemplateSelector, RelativeSource={RelativeSource TemplatedParent}}"/>
-
 
                                     <avalonDockControls:DropDownButton
                                         x:Name="SinglePaneContextMenu"
@@ -611,7 +633,8 @@
                                         <Image Source="/AvalonDock;component/Images/PinMenu.png"/>
                                     </avalonDockControls:DropDownButton>
 
-                                    <Button shell:WindowChrome.IsHitTestVisibleInChrome="True"
+                                    <Button 
+                                        shell:WindowChrome.IsHitTestVisibleInChrome="True"
                                         Focusable="False"
                                         Visibility="{Binding IsMaximized, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource InverseBoolToVisibilityConverter}}"
                                         Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
@@ -621,7 +644,8 @@
                                         <Image Source="/AvalonDock;component/Images/PinMaximize.png"/>
                                     </Button>
 
-                                    <Button shell:WindowChrome.IsHitTestVisibleInChrome="True"
+                                    <Button 
+                                        shell:WindowChrome.IsHitTestVisibleInChrome="True"
                                         Focusable="False"
                                         Visibility="{Binding IsMaximized, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource BoolToVisibilityConverter}}"
                                         Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
@@ -631,7 +655,8 @@
                                         <Image Source="/AvalonDock;component/Images/PinRestore.png"/>
                                     </Button>
 
-                                    <Button shell:WindowChrome.IsHitTestVisibleInChrome="True"
+                                    <Button 
+                                        shell:WindowChrome.IsHitTestVisibleInChrome="True"
                                         Focusable="False"
                                         Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
                                         Command="{x:Static shell:SystemCommands.CloseWindowCommand}"
