Build 2.0.0345 - Fixed some dragging bugs, Template/TemplateSelector Issues
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@89300 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
@@ -83,6 +83,13 @@
                 </local:DocumentTemplateSelector>
             </avalonDock:DockingManager.DocumentTitleTemplateSelector>
 
+            <avalonDock:DockingManager.DocumentTitleTemplate>
+                <DataTemplate>
+                    <Border>
+                        <TextBlock Text="{Binding Path=Content.FileName}"/>
+                    </Border>
+                </DataTemplate>
+            </avalonDock:DockingManager.DocumentTitleTemplate>
             <avalonDock:DockingManager.AnchorableTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Vertical">
