Build 2.0.0397 - Issues #14847,#14849,#14815. Started theming support.
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@89595 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
@@ -7,6 +7,9 @@
         xmlns:local="clr-namespace:AvalonDock.MVVMTestApp"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         Title="MainWindow" Height="350" Width="525">
+    <Window.Resources>
+        <local:ActiveDocumentConverter x:Key="ActiveDocumentConverter"/>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -26,7 +29,7 @@
         <avalonDock:DockingManager x:Name="dockManager" 
                                    DocumentsSource="{Binding Files}"
                                    AnchorablesSource="{Binding Tools}"
-                                   ActiveContent="{Binding ActiveDocument, Mode=TwoWay}"
+                                   ActiveContent="{Binding ActiveDocument, Mode=TwoWay, Converter={StaticResource ActiveDocumentConverter}}"
                                    DocumentCloseCommand="{Binding CloseCommand}"
                                    Grid.Row="1">
             <avalonDock:DockingManager.DocumentTemplateSelector>
