Build 2.0.0471 - Fixed some issues with MVVM support and binding, VS2010 theme extended
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@90157 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
@@ -25,6 +25,9 @@
                 <Separator/>
                 <MenuItem Header="Close" Command="{Binding CloseCommand}"/>
             </MenuItem>
+            <MenuItem Header="Tools">
+                
+            </MenuItem>
         </Menu>
         <avalonDock:DockingManager x:Name="dockManager" 
                                    DocumentsSource="{Binding Files}"
