Build 2.0.0485 - Fixed issue reported in #14824, additional VS2010 theme work, support for icons in tab items
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@90212 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
@@ -76,7 +76,7 @@
                 <avalonDockLayout:LayoutRoot.LeftSide>
                     <avalonDockLayout:LayoutAnchorSide>
                         <avalonDockLayout:LayoutAnchorGroup>
-                            <avalonDockLayout:LayoutAnchorable Title="AutoHide1 Content">
+                            <avalonDockLayout:LayoutAnchorable Title="AutoHide1 Content" IconSource="/AvalonDock.TestApp;component/Images/address-book--pencil.png">
                                 <TextBox Text="{Binding TestTimer, Mode=OneWay, StringFormat='AutoHide Attached to Timer ->\{0\}'}"/>
                             </avalonDockLayout:LayoutAnchorable>
                             <avalonDockLayout:LayoutAnchorable Title="AutoHide2 Content">
